--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^10.3.2",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
+    "@types/reactstrap": "^6.0.0",
     "awesome-typescript-loader": "^5.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -69,6 +70,8 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "reactstrap": "^6.1.0"
+  },
   "postcss": {}
 }
