--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
         "module": "commonjs",
         "target": "es5",
         "jsx": "react",
-        "lib": ["es5", "es6", "dom"]
+        "lib": ["es5", "es6", "dom"],
     },
+
     "include": [
         "./src/**/*"
     ]
